# landau-poisson-solver

./: .gitignore  CMakeLists.txt  configure.ac
source/: CMakeLists.txt  EntropyCalculations.cpp  LP_ompi.cpp  LP_ompi.h  Makefile.am
tests/: CMakeLists.txt  test0.sh
